<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".crete.CreateDataPeriksa">



    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/beratbadan">



        
        <EditText
            android:id="@+id/edtbb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:textSize="16sp"
            android:textColor="@color/primary_text"
            android:fontFamily="@font/notosans_regular" />



    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/tinggi_badan">

        <EditText
            android:id="@+id/edttb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:textSize="16sp"
            android:textColor="@color/primary_text"
            android:fontFamily="@font/notosans_regular" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/bulan">

        <EditText
            android:id="@+id/edtbulan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:textSize="16sp"
            android:textColor="@color/primary_text"
            android:fontFamily="@font/notosans_regular" />


    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btnSimpan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/notosans_bold"
        android:layout_marginTop="16dp"
        android:text="@string/simpan"
        android:textSize="14sp"
        android:textColor="@android:color/white"
        android:background="@color/colorPrimaryDark"/>

</LinearLayout>