<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    card_view:cardCornerRadius="4dp"
    card_view:cardElevation="6dp"
    card_view:cardUseCompatPadding="true"
    android:paddingTop="8dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="7dp">

            <TextView
                android:layout_width="100sp"
                android:layout_height="wrap_content"
                android:text="Berat Badan  "/>
            <TextView
                android:layout_width="10sp"
                android:layout_height="wrap_content"
                android:text=":"/>

            <TextView
                android:id="@+id/tvBeratBadan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/beratbadan" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="7dp">

            <TextView
                android:layout_width="100sp"
                android:layout_height="wrap_content"
                android:text="Tinggi Badan  "/>
            <TextView
                android:layout_width="10sp"
                android:layout_height="wrap_content"
                android:text=":"/>

            <TextView
                android:id="@+id/tvTinggiBadan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tinggi_badan" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="7dp">

            <TextView
                android:layout_width="100sp"
                android:layout_height="wrap_content"
                android:text="Bulan  "/>
            <TextView
                android:layout_width="10sp"
                android:layout_height="wrap_content"
                android:text=":"/>

            <TextView
                android:id="@+id/tvBulan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/bulan" />
        </TableRow>
    </LinearLayout>

</android.support.v7.widget.CardView>